Bug 168023 - Empty cells should not be rotated if the Text Orientation is set
Summary: Empty cells should not be rotated if the Text Orientation is set
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.5.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-20 09:29 UTC by Balázs Varga
Modified: 2025-08-26 10:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document (12.13 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-08-20 09:31 UTC, Balázs Varga
Details
Screen (86.22 KB, image/png)
2025-08-20 09:34 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balázs Varga 2025-08-20 09:29:47 UTC
Description:
We should not rotate empty cells (no any text/content) even if the Text Orientation is set. We should only do rotation (Text Orientation) if we have text content in the cell.

Steps to Reproduce:
1. Open attached file (example.ods)
2. Compare B1 and F1 cells in LO and in MSO
3.

Actual Results:
F1 cell borders are rotated

Expected Results:
F1 cell borders should not be rotated


Reproducible: Always


User Profile Reset: Yes

Additional Info:
We should only do rotation (Text Orientation) if we have text content in the cell.
Comment 1 Balázs Varga 2025-08-20 09:31:09 UTC
Created attachment 202394 [details]
Example document
Comment 2 Balázs Varga 2025-08-20 09:34:50 UTC
Created attachment 202395 [details]
Screen
Comment 3 BogdanB 2025-08-20 09:42:27 UTC
Rotated in
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ro-RO (en_US); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2025-08-21 06:14:52 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9e3cebf6c017b01ec917c818988db45aa9ac0b1d

tdf#168023 sc view: fix empty cell be not rotated with Text Orientation

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-08-21 15:35:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d7282fff1cac8057ca9ec86f45bd8114bcbbaf3e

tdf#168023 sc view: fix empty cell be not rotated with Text Orientation

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.