tdf#168023 sc view: fix empty cell be not rotated with Text Orientation

We should only do text rotation if we have text content in the cell.
To test just open bugdoc in check if F1 cell borders are rotated or not.

TODO: unit test

Change-Id: Ie7a5dda8b81e3793300e6bc358540fa363568b91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189963
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 9e3cebf6c017b01ec917c818988db45aa9ac0b1d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189979
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>